--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 	path = deps/wasm3
 	url = https://github.com/saghul/wasm3.git
 	branch = v0.5-tjs
+[submodule "deps/llhttp"]
+	path = deps/llhttp
+	url = https://github.com/nodejs/llhttp
